--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <h1 class="text-5xl font-bold gradient-text">可达鸭</h1>
                     </a>
                 </div>
-<!--                <p class="text-gray-400 mb-8">自由观影，畅享精彩</p>-->
+                <p class="text-gray-400 mb-8">可达鸭我可以给所有想看的哈哈哈哈</p>
             </header>
             
 
